--- a/_posts/2012-08-25-hello-world.html
+++ b/_posts/2012-08-25-hello-world.html
@@ -1,7 +1,7 @@
-กก  ---
-กกกกlayout: default
-กกกกtitle: ฤใบรฃฌสภฝ็
-กกกก---
-กกกก<h2>{{ page.title }}</h2>
-กกกก<p>ฮาตฤตฺาปฦชฮฤีย</p>
-กกกก<p>{{ page.date | date_to_string }}</p>
+๏ปฟยกยก  ---
+ยกยกยกยกlayout: default
+ยกยกยกยกtitle: รรฃยบรยฃยฌรร€ยฝรง
+ยกยกยกยก---
+ยกยกยกยก<h2>{{ page.title }}</h2>
+ยกยกยกยก<p>รร’ยตรยตรร’ยปรยชรรร•ร</p>
+ยกยกยกยก<p>{{ page.date | date_to_string }}</p>
